Enabling Multiple Configuration Build
Setup multi configuration build that can build multiple
configurations defined in conf/multiconfig:
   ├── grr.conf
   ├── qsp.conf
   └── snr.conf

This MC build can be enabled in local.conf with BBMULTICONFIG var:
    BBMULTICONFIG = "snr grr qsp"

For each configuration, a specific TMPDIR will be created in BUILDDIR.
If you need to set a different location for TMPDIR, use the TMPDIR_MULTICONFIG
variable to set the path for all configurations.

To compile the multiple configuration build, the following sintax should be used:
    bitbake [mc:multiconfigname:]target [[[mc:multiconfigname:]target] ... ]
    e.g. bitbake mc::axxia-image-dev  # compile axxia-image-dev for all configuration
         bitbake mc:snr:axxia-image-min   # compile axxia-image-run for Snow Ridge
         bitbake mc:grr:virtual/kernel  # compile the kernel for Grand Ridge
	 bitbake mc:qsp:axxia-image-qsp  # compile QSP image for Simulation

Be aware that the default configuration (local.conf) can be used as before.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-distro/conf/local.conf.sample
+++ b/meta-intel-distro/conf/local.conf.sample
@@ -24,13 +24,18 @@ PREFERRED_VERSION_linux-intel = "5.15%"
 # Release version should be the meta-intel-axxia repository tag from release note.
 # RELEASE_VERSION = "" 
 
+# Enabling Multiple Configuration Build. The following sintax should be used:
+# bitbake [mc:multiconfigname:]target [[[mc:multiconfigname:]target] ... ]
+#BBMULTICONFIG ?= "snr grr qsp"
+
 BB_NUMBER_THREADS ?= "${@oe.utils.cpu_count()}"
 PARALLEL_MAKE ?= "-j ${@oe.utils.cpu_count()}"
 
 # Assume directories were created under TOPDIR
 #DL_DIR ?= "${TOPDIR}/downloads"
 #SSTATE_DIR ?= "${TOPDIR}/sstate-cache"
-#TMPDIR = "${TOPDIR}/tmp"
+TMPDIR_MULTICONFIG ?= "${TOPDIR}"
+TMPDIR ?= "${TMPDIR_MULTICONFIG}/tmp"
 
 DISTRO = "intel-axxia"
 PACKAGE_CLASSES ?= "package_rpm"
