--- a/meta-intel-distro/conf/local.conf.sample
+++ b/meta-intel-distro/conf/local.conf.sample
@@ -25,12 +25,18 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-intel"
 # Release version should be the meta-intel-axxia repository tag from release note.
 # RELEASE_VERSION = "" 
 
+# Enabling Multiple Configuration Build. The following sintax should be used:
+# bitbake [mc:multiconfigname:]target [[[mc:multiconfigname:]target] ... ]
+#BBMULTICONFIG ?= "snr grr qsp"
+
 BB_NUMBER_THREADS ?= "${@oe.utils.cpu_count()}"
 PARALLEL_MAKE ?= "-j ${@oe.utils.cpu_count()}"
 
-# Assume directories were created at the same level with poky
-# DL_DIR = "##OEROOT##/../downloads"
-# SSTATE_DIR = "##OEROOT##/../sstate_cache"
+# Assume directories were created under TOPDIR
+#DL_DIR ?= "${TOPDIR}/downloads"
+#SSTATE_DIR ?= "${TOPDIR}/sstate-cache"
+TMPDIR_MULTICONFIG ?= "${TOPDIR}"
+TMPDIR ?= "${TMPDIR_MULTICONFIG}/tmp"
 
 DISTRO = "intel-axxia"
 PACKAGE_CLASSES ?= "package_rpm"
