distro: Overlay uninative.bbclass for latter fixes
Create a copy of uninative.bbclass in our layer in order to
overlay the one from poky for latter fixes we can do only in
the class functions.

B0292 - meta-intel-axxia: kirkstone: Segmentation fault on do_image_ext4

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-distro/conf/distro/intel-axxia.conf
+++ b/meta-intel-distro/conf/distro/intel-axxia.conf
@@ -20,6 +20,9 @@ include conf/distro/include/intel-axxia-defaults.inc
 include conf/distro/include/intel-axxia-custom.inc
 include conf/distro/include/intel-axxia-flags.inc
 
+INHERIT:remove = "uninative"
+INHERIT:append = " uninative-fixed"
+
 # Enable SIMICS support and set the version to compile
 #DISTRO_FEATURES:append = " simics"
 #SIMICS_VERSION = ""
