--- a/meta-intel-rdk/recipes-kernel/kmod/kmod/blacklist.conf
+++ b/meta-intel-rdk/recipes-kernel/kmod/kmod/blacklist.conf
@@ -5,6 +5,7 @@ blacklist ice_sw
 blacklist ice_sw_ae
 blacklist ies
 blacklist intel_qat
+blacklist intel_vsec
 blacklist ipsec_inline
 blacklist oobmsm_rdk
 blacklist qat_300xx
