linux: Enable the I40E Driver
Adds support for network cards in the I40E family.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
@@ -163,8 +163,8 @@ CONFIG_IGB=y
 CONFIG_IGBVF=y
 CONFIG_IXGB=y
 CONFIG_IXGBE=y
-# CONFIG_I40E is not set
-# CONFIG_I40EVF is not set
+CONFIG_I40E=y
+CONFIG_I40EVF=y
 
 # CONFIG_SERIAL_8250_DMA is not set
 
