Switch to nanbield yocto release hosted in master branch
Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-bsp/conf/layer.conf
+++ b/meta-intel-bsp/conf/layer.conf
@@ -9,5 +9,5 @@ BBFILE_COLLECTIONS += "intel-bsp"
 BBFILE_PATTERN_intel-bsp := "^${LAYERDIR}/"
 BBFILE_PRIORITY_intel-bsp = "5"
 
-LAYERSERIES_COMPAT_intel-bsp = "kirkstone"
+LAYERSERIES_COMPAT_intel-bsp = "nanbield"
 LAYERDEPENDS_intel-bsp = "intel"
