meta-intel-bsp: Update Linux 5.15 Configuration
Add options for DSA (idxd).

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/recipes-kernel/linux/frags/6.1/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/6.1/common-non-hw.cfg
@@ -36,7 +36,9 @@ CONFIG_BCMA_DRIVER_GPIO=y
 CONFIG_NFSD=y
 # CONFIG_NFSD_V4 is not set
 
-# CONFIG_PCI_PRI is not set
+CONFIG_PCI_ATS=y
+CONFIG_PCI_PRI=y
+CONFIG_PCI_PASID=y
 
 CONFIG_NETFILTER_NETLINK=y
 CONFIG_NETFILTER_NETLINK_QUEUE=y
@@ -80,8 +82,6 @@ CONFIG_SPI_INTEL_PLATFORM=y
 CONFIG_MDIO_DEVICE=y
 
 # CONFIG_KGDB is not set
-
-CONFIG_PCI_PASID=y
 
 CONFIG_PINCTRL_CEDARFORK=y
 
@@ -171,6 +171,8 @@ CONFIG_IXGBE=y
 CONFIG_VFIO_NOIOMMU=y
 CONFIG_VFIO_MDEV=m
 CONFIG_INTEL_IOMMU_DEFAULT_ON=y
+CONFIG_INTEL_IOMMU=y
+CONFIG_INTEL_IOMMU_SVM=y
 CONFIG_KVM_VFIO=y
 
 CONFIG_UIO=y
@@ -219,6 +221,8 @@ CONFIG_LIBCRC32C=y
 CONFIG_CRC8=y
 
 CONFIG_INTEL_IDXD=m
+CONFIG_INTEL_IDXD_SVM=y
+CONFIG_INTEL_IDXD_PERFMON=y
 
 CONFIG_DMATEST=m
 
