meta-intel-bsp: Update Linux 5.15 Configuration
Add options for DSA (idxd).

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.15/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.15/common-non-hw.cfg
@@ -37,8 +37,9 @@ CONFIG_NFSD=y
 # CONFIG_NFSD_V3 is not set
 # CONFIG_NFSD_V4 is not set
 
-# CONFIG_PCI_PRI is not set
-# CONFIG_PCI_PASID is not set
+CONFIG_PCI_ATS=y
+CONFIG_PCI_PRI=y
+CONFIG_PCI_PASID=y
 
 CONFIG_NETFILTER_NETLINK=y
 CONFIG_NETFILTER_NETLINK_QUEUE=y
@@ -175,6 +176,8 @@ CONFIG_VFIO_NOIOMMU=y
 CONFIG_VFIO_MDEV=m
 CONFIG_VFIO_MDEV_DEVICE=m
 CONFIG_INTEL_IOMMU_DEFAULT_ON=y
+CONFIG_INTEL_IOMMU=y
+CONFIG_INTEL_IOMMU_SVM=y
 CONFIG_KVM_VFIO=y
 
 CONFIG_UIO=y
@@ -226,6 +229,8 @@ CONFIG_LIBCRC32C=y
 CONFIG_CRC8=y
 
 CONFIG_INTEL_IDXD=m
+CONFIG_INTEL_IDXD_SVM=y
+CONFIG_INTEL_IDXD_PERFMON=y
 
 CONFIG_DMATEST=m
 
