conf/templates: Sync samples with upstream ones
Also, remove extended local.conf sample and point to the one
from meta-poky layer in order to remove duplicated info.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-distro/conf/templates/default/local.conf.sample
+++ b/meta-intel-distro/conf/templates/default/local.conf.sample
@@ -52,4 +52,4 @@ PACKAGECONFIG:append:pn-qemu-system-native = " sdl"
 CONF_VERSION = "2"
 
 # For more options check meta-intel-distro layer for README and 
-# conf/local.conf.sample.extended
+# meta-poky/conf/templates/default/local.conf.sample.extended
