--- a/meta-intel-bsp/recipes-kernel/linux/frags/6.1/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/6.1/common-non-hw.cfg
@@ -34,11 +34,9 @@ CONFIG_BCMA_DRIVER_GPIO=y
 # CONFIG_NFS_V2 is not set
 
 CONFIG_NFSD=y
-# CONFIG_NFSD_V3 is not set
 # CONFIG_NFSD_V4 is not set
 
 # CONFIG_PCI_PRI is not set
-# CONFIG_PCI_PASID is not set
 
 CONFIG_NETFILTER_NETLINK=y
 CONFIG_NETFILTER_NETLINK_QUEUE=y
@@ -72,9 +70,9 @@ CONFIG_MTD_CFI_STAA=y
 CONFIG_MTD_CFI_UTIL=y
 CONFIG_MTD_SPI_NOR=y
 CONFIG_MTD_SPI_NOR_USE_4K_SECTORS=y
-CONFIG_SPI_INTEL_SPI=y
-CONFIG_SPI_INTEL_SPI_PCI=y
-CONFIG_SPI_INTEL_SPI_PLATFORM=y
+CONFIG_SPI_INTEL=y
+CONFIG_SPI_INTEL_PCI=y
+CONFIG_SPI_INTEL_PLATFORM=y
 
 # CONFIG_VIRTIO_BLK is not set
 # CONFIG_SCSI_VIRTIO is not set
@@ -146,7 +144,6 @@ CONFIG_BPF_SYSCALL=y
 # CONFIG_PROC_CHILDREN is not set
 # CONFIG_ENCRYPTED_KEYS is not set
 
-CONFIG_DEVKMEM=y
 CONFIG_DEVMEM=y
 # CONFIG_STRICT_DEVMEM is not set
 
@@ -173,7 +170,6 @@ CONFIG_IXGBE=y
 
 CONFIG_VFIO_NOIOMMU=y
 CONFIG_VFIO_MDEV=m
-CONFIG_VFIO_MDEV_DEVICE=m
 CONFIG_INTEL_IOMMU_DEFAULT_ON=y
 CONFIG_KVM_VFIO=y
 
@@ -197,9 +193,6 @@ CONFIG_NVME_TARGET_LOOP=y
 CONFIG_NVME_TARGET_RDMA=y
 CONFIG_NVME_TARGET_FC=y
 # CONFIG_NVME_TARGET_FCLOOP is not set
-CONFIG_NVM=y
-CONFIG_NVM_PBLK=m
-# CONFIG_NVM_PBLK_DEBUG is not set
 # CONFIG_BATTERY_BQ27XXX_DT_UPDATES_NVM is not set
 CONFIG_RTC_NVMEM=y
 CONFIG_NVMEM=y
