meta-intel-bsp: Make All I40E Drivers as Modules
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.15/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.15/common-non-hw.cfg
@@ -167,8 +167,10 @@ CONFIG_IGB=y
 CONFIG_IGBVF=y
 CONFIG_IXGB=y
 CONFIG_IXGBE=y
-# CONFIG_I40E is not set
+
+CONFIG_I40E=m
 # CONFIG_I40EVF is not set
+CONFIG_I40E_DCB=y
 
 # CONFIG_SERIAL_8250_DMA is not set
 
@@ -208,8 +210,6 @@ CONFIG_RTC_NVMEM=y
 CONFIG_NVMEM=y
 
 CONFIG_I2C_CHARDEV=y
-
-CONFIG_I40E_DCB=y
 
 CONFIG_HAVE_KVM_IRQCHIP=y
 CONFIG_HAVE_KVM_IRQFD=y
