--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
@@ -164,8 +164,10 @@ CONFIG_IGB=y
 CONFIG_IGBVF=y
 CONFIG_IXGB=y
 CONFIG_IXGBE=y
-CONFIG_I40E=y
-CONFIG_I40EVF=y
+
+CONFIG_I40E=m
+# CONFIG_I40EVF is not set
+CONFIG_I40E_DCB=y
 
 # CONFIG_SERIAL_8250_DMA is not set
 
@@ -205,8 +207,6 @@ CONFIG_RTC_NVMEM=y
 CONFIG_NVMEM=y
 
 CONFIG_I2C_CHARDEV=y
-
-CONFIG_I40E_DCB=y
 
 CONFIG_HAVE_KVM_IRQCHIP=y
 CONFIG_HAVE_KVM_IRQFD=y
