Update Linux Configuration
Set CONFIG_TRANSPARENT_HUGEPAGE=y.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/recipes-kernel/linux/frags/6.1/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/6.1/common-non-hw.cfg
@@ -314,3 +314,5 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+
+CONFIG_TRANSPARENT_HUGEPAGE=y
