meta-intel-bsp: Update Linux Configuration
Add CONFIG_I40EVF=m.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
@@ -166,7 +166,7 @@ CONFIG_IXGB=y
 CONFIG_IXGBE=y
 
 CONFIG_I40E=m
-# CONFIG_I40EVF is not set
+CONFIG_I40EVF=m
 CONFIG_I40E_DCB=y
 
 # CONFIG_SERIAL_8250_DMA is not set
