meta-intel-bsp: Enable UBSAN
For the debug kernel, set CONFIG_UBSAN=y.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.10/debug.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.10/debug.cfg
@@ -36,6 +36,8 @@ CONFIG_DEBUG_ATOMIC_SLEEP=y
 CONFIG_KASAN=y
 CONFIG_KASAN_INLINE=y
 
+CONFIG_UBSAN=y
+
 CONFIG_DEBUG_STACK_USAGE=y
 CONFIG_DEBUG_HIGHMEM=y
 CONFIG_DEBUG_MEMORY_INIT=y
