meta-intel-bsp: Remove ttyS0 from GRR
Only include ttyS4.  ttyS0 was included in the early builds
to allow the images to run on other, non-grr, systems.  Now
that grr systems are widely available it is no longer needed.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/conf/machine/intel-axxia-grr.conf
+++ b/meta-intel-bsp/conf/machine/intel-axxia-grr.conf
@@ -8,7 +8,7 @@ require ${@bb.utils.contains('DISTRO_FEATURES', 'qsp', \
 	'conf/machine/include/tune-qsp.inc', '', d)}
 
 SYSLINUX_OPTS = "serial 0 115200"
-SERIAL_CONSOLES = "115200;ttyS0 115200;ttyS4"
+SERIAL_CONSOLES = "115200;ttyS4"
 SERIAL_CONSOLES_CHECK = "${SERIAL_CONSOLES}"
 
 APPEND = "console=tty0 console=ttyS4,115200 reboot=p,w intel-spi.writeable=1 intel_iommu=on,sm_on"
