--- a/meta-intel-bsp/recipes-kernel/linux/frags/6.6/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/6.6/common-non-hw.cfg
@@ -305,6 +305,10 @@ CONFIG_EFI_TEST=m
 
 CONFIG_PROFILING=y
 
+CONFIG_SAMPLES=y
+CONFIG_SAMPLE_VFIO_MDEV_MTTY=m
+CONFIG_VFIO_MDEV=m
+
 CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
