--- a/meta-intel-bsp/recipes-kernel/linux/frags/6.6/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/6.6/common-non-hw.cfg
@@ -318,3 +318,8 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 
 CONFIG_TRANSPARENT_HUGEPAGE=y
+
+CONFIG_INTEL_VSEC=m
+CONFIG_INTEL_TPMI=m
+CONFIG_INTEL_SPEED_SELECT_TPMI=m
+CONFIG_INTEL_S3M_BRIDGE=m
