Backport S3M Based on the Intel VSEC Driver
NOT YET PUBLICLY AVAILABLE!!!!!

The eliminates the need for the RDK OOBMSM driver when using
CPU Attestation, SDOS, or VAB.

Also, the intel_vsec driver is no longer blacklisted.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/recipes-kernel/linux/frags/6.6/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/6.6/common-non-hw.cfg
@@ -322,3 +322,8 @@ CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_GPIO_SYSFS=y
 
 CONFIG_ACPI_EXTLOG=m
+
+CONFIG_INTEL_VSEC=m
+CONFIG_INTEL_TPMI=m
+CONFIG_INTEL_SPEED_SELECT_TPMI=m
+CONFIG_INTEL_S3M_BRIDGE=m
