Update to the Latest DEPENDENCIES
All of the repos in DEPENDENCIES now have branches for scarthgap.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/conf/layer.conf
+++ b/meta-intel-bsp/conf/layer.conf
@@ -9,5 +9,5 @@ BBFILE_COLLECTIONS += "intel-bsp"
 BBFILE_PATTERN_intel-bsp := "^${LAYERDIR}/"
 BBFILE_PRIORITY_intel-bsp = "5"
 
-LAYERSERIES_COMPAT_intel-bsp = "nanbield"
+LAYERSERIES_COMPAT_intel-bsp = "scarthgap"
 LAYERDEPENDS_intel-bsp = "intel"
