--- a/meta-intel-rdk/conf/layer.conf
+++ b/meta-intel-rdk/conf/layer.conf
@@ -9,7 +9,7 @@ BBFILE_COLLECTIONS += "intel-rdk"
 BBFILE_PATTERN_intel-rdk = "^${LAYERDIR}/"
 BBFILE_PRIORITY_intel-rdk = "6"
 
-LAYERSERIES_COMPAT_intel-rdk = "nanbield"
+LAYERSERIES_COMPAT_intel-rdk = "scarthgap"
 LAYERDEPENDS_intel-rdk = "intel-bsp openembedded-layer"
 
 RDK_LAYER_PATH = "${LAYERDIR}" 
