--- a/meta-intel-distro/conf/layer.conf
+++ b/meta-intel-distro/conf/layer.conf
@@ -10,7 +10,7 @@ BBFILE_COLLECTIONS += "intel-distro"
 BBFILE_PATTERN_intel-distro := "^${LAYERDIR}/"
 BBFILE_PRIORITY_intel-distro = "5"
 
-LAYERSERIES_COMPAT_intel-distro = "nanbield"
+LAYERSERIES_COMPAT_intel-distro = "scarthgap"
 LAYERDEPENDS_intel-distro = " \
 	core \
 	yocto \
