meta-intel-bsp: Add INTEL_UNCORE_FREQ_CONTROL to 6.6
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/recipes-kernel/linux/frags/6.6/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/6.6/common-non-hw.cfg
@@ -322,3 +322,6 @@ CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_GPIO_SYSFS=y
 
 CONFIG_ACPI_EXTLOG=m
+
+CONFIG_PERF_EVENTS_INTEL_UNCORE=y
+CONFIG_INTEL_UNCORE_FREQ_CONTROL=y
