For Linux 6.6, Add Intel VSEC TPMI
Add the intel_vsec_tpmi module and speed control.

The modules (intel_vsec_tpmi, isst_tpmi_core,
and isst_tpmi) are black listed to avoid a conflict
with the OOBMSM driver included in the RDK.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/recipes-kernel/linux/frags/6.6/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/6.6/common-non-hw.cfg
@@ -329,3 +329,6 @@ CONFIG_INTEL_UNCORE_FREQ_CONTROL=y
 CONFIG_PCIE_DPC=y
 
 CONFIG_INTEL_VSEC=m
+
+CONFIG_INTEL_TPMI=m
+CONFIG_INTEL_SPEED_SELECT_TPMI=m
