--- a/meta-intel-rdk/recipes-kernel/kmod/kmod/blacklist.conf
+++ b/meta-intel-rdk/recipes-kernel/kmod/kmod/blacklist.conf
@@ -7,6 +7,7 @@ blacklist ice_sw_ae
 blacklist ies
 blacklist intel_qat
 blacklist intel_vsec
+blacklist intel_vsec_tpmi
 blacklist ipsec_inline
 blacklist oobmsm_rdk
 blacklist qat_300xx
