Linux 6.6: Add Uncore Frequency Support
The modules (intel_uncore_frequency_common, intel_uncore_frequency,
and intel_uncore_frequency_tpmi) are blacklisted to avoid a conflict
with the OOBMSM driver included in the RDK.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-rdk/recipes-kernel/kmod/kmod/blacklist.conf
+++ b/meta-intel-rdk/recipes-kernel/kmod/kmod/blacklist.conf
@@ -6,9 +6,14 @@ blacklist ice_sw
 blacklist ice_sw_ae
 blacklist ies
 blacklist intel_qat
+blacklist intel_uncore_frequency
+blacklist intel_uncore_frequency_common
+blacklist intel_uncore_frequency_tpmi
 blacklist intel_vsec
 blacklist intel_vsec_tpmi
 blacklist ipsec_inline
+blacklist isst_tpmi
+blacklist isst_tpmi_core
 blacklist oobmsm_rdk
 blacklist qat_300xx
 blacklist qat_c3xxx
