--- a/meta-intel-distro/conf/distro/intel-axxia.conf
+++ b/meta-intel-distro/conf/distro/intel-axxia.conf
@@ -24,6 +24,9 @@ include conf/distro/include/intel-axxia-flags.inc
 #DISTRO_FEATURES:append = " simics"
 #SIMICS_VERSION = ""
 
+# Choose GCC version: 15.% (gcc15). Default version: 13.%
+#DISTRO_FEATURES:append = " gcc15"
+
 BBMASK:append = " ${@bb.utils.contains('DISTRO_FEATURES', 'simics', '', \
 			'meta-intel-distro/recipes-support/simics', d)} \
 		  ${@oe.utils.conditional('ALTERNATIVE_KERNELS', '', \
