--- a/meta-intel-distro/conf/templates/default/local.conf.sample
+++ b/meta-intel-distro/conf/templates/default/local.conf.sample
@@ -15,6 +15,9 @@ PREFERRED_VERSION_linux-intel = "6.6%"
 # Enable "multilib"
 #DISTRO_FEATURES:append = " multilib"
 
+# Choose GCC version: 15.% (gcc15). Default version: 13.%
+#DISTRO_FEATURES:append = " gcc15"
+
 # Enable settings for INTEL QSP System (for axxia-image-qsp image)
 #DISTRO_FEATURES:append = " qsp"
 
