intel-axxia: Add support for GCC v11
GCC 11.4 support is required for performance testing.

A0405 - GCC 11 with Linux 6.6/Scarthgap

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-distro/conf/distro/intel-axxia.conf
+++ b/meta-intel-distro/conf/distro/intel-axxia.conf
@@ -24,7 +24,7 @@ include conf/distro/include/intel-axxia-flags.inc
 #DISTRO_FEATURES:append = " simics"
 #SIMICS_VERSION = ""
 
-# Choose GCC version: 15.% (gcc15). Default version: 13.%
+# Choose GCC version: 15.% (gcc15) or 11.% (gcc11). Default version: 13.%
 #DISTRO_FEATURES:append = " gcc15"
 
 BBMASK:append = " ${@bb.utils.contains('DISTRO_FEATURES', 'simics', '', \
