--- a/meta-intel-distro/conf/distro/intel-axxia.conf
+++ b/meta-intel-distro/conf/distro/intel-axxia.conf
@@ -2,7 +2,9 @@ require conf/distro/poky.conf \
 	${@bb.utils.contains('DISTRO_FEATURES', 'multilib', \
 	'conf/multilib.conf', '', d)} \
 	${@bb.utils.contains('DISTRO_FEATURES', 'qsp', \
-	'conf/distro/include/intel-axxia-qsp.inc', '', d)}
+	'conf/distro/include/intel-axxia-qsp.inc', '', d)} \
+	${@bb.utils.contains('DISTRO_FEATURES', 'gcc11', \
+	'conf/distro/include/intel-axxia-gcc11.inc', '', d)}
 
 DISTRO = "intel-axxia"
 DISTRO_NAME = "Intel Axxia Distro"
