meta-intel-bsp: Upates to Linux 6.6 Fragments
Add 'CONFIG_MEMORY_FAILURE=y' and clean up duplication of
CONFIG_INTEL_UNCORE_FREQ_CONTROL.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/recipes-kernel/linux/frags/6.6/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/6.6/common-non-hw.cfg
@@ -305,6 +305,8 @@ CONFIG_EFI_TEST=m
 
 CONFIG_PROFILING=y
 
+CONFIG_MEMORY_FAILURE=y
+
 CONFIG_SAMPLES=y
 CONFIG_SAMPLE_VFIO_MDEV_MTTY=m
 CONFIG_VFIO_MDEV=m
@@ -332,5 +334,3 @@ CONFIG_INTEL_VSEC=m
 
 CONFIG_INTEL_TPMI=m
 CONFIG_INTEL_SPEED_SELECT_TPMI=m
-
-CONFIG_INTEL_UNCORE_FREQ_CONTROL=m
