meta-intel-bsp: Update Linux 6.6 Config
Add ACPI_HED, ACPI_APEI_GHES, and ACPI_APEI_MEMORY_FAILURE.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/recipes-kernel/linux/frags/6.6/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/6.6/common-non-hw.cfg
@@ -116,6 +116,7 @@ CONFIG_EDAC_DEBUG=y
 CONFIG_EDAC_I10NM=m
 CONFIG_EDAC_ATOMIC_SCRUB=y
 CONFIG_EDAC_SUPPORT=y
+CONFIG_EDAC_GHES=y
 
 CONFIG_KEXEC=y
 CONFIG_CRASH_CORE=y
@@ -225,8 +226,11 @@ CONFIG_INTEL_IDXD_PERFMON=y
 
 CONFIG_DMATEST=m
 
+CONFIG_ACPI_HED=y
 CONFIG_ACPI_APEI=y
 CONFIG_ACPI_APEI_EINJ=m
+CONFIG_ACPI_APEI_GHES=y
+CONFIG_ACPI_APEI_MEMORY_FAILURE=y
 
 CONFIG_ITCO_WDT=m
 
