intel-axxia: Make v11 the default GCC version
A0406 - GRR -- Make GCC 11 the Default

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-distro/conf/distro/intel-axxia.conf
+++ b/meta-intel-distro/conf/distro/intel-axxia.conf
@@ -3,8 +3,8 @@ require conf/distro/poky.conf \
 	'conf/multilib.conf', '', d)} \
 	${@bb.utils.contains('DISTRO_FEATURES', 'qsp', \
 	'conf/distro/include/intel-axxia-qsp.inc', '', d)} \
-	${@bb.utils.contains('DISTRO_FEATURES', 'gcc11', \
-	'conf/distro/include/intel-axxia-gcc11.inc', '', d)}
+	${@bb.utils.contains_any('DISTRO_FEATURES', 'gcc15 gcc13', '', \
+	'conf/distro/include/intel-axxia-gcc11.inc', d)}
 
 DISTRO = "intel-axxia"
 DISTRO_NAME = "Intel Axxia Distro"
@@ -26,7 +26,7 @@ include conf/distro/include/intel-axxia-flags.inc
 #DISTRO_FEATURES:append = " simics"
 #SIMICS_VERSION = ""
 
-# Choose GCC version: 15.% (gcc15) or 11.% (gcc11). Default version: 13.%
+# Choose GCC version: 15.% (gcc15), 13.% (gcc13) or 11.% (default)
 #DISTRO_FEATURES:append = " gcc15"
 
 BBMASK:append = " ${@bb.utils.contains('DISTRO_FEATURES', 'simics', '', \
