linux: Set preferred kernel provider for each machine
A0411 - Add new kernel repositories PMR (meta-intel-axxia)

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-bsp/conf/machine/intel-axxia-pmr.conf
+++ b/meta-intel-bsp/conf/machine/intel-axxia-pmr.conf
@@ -12,3 +12,6 @@ SERIAL_CONSOLES = "115200;ttyS0"
 SERIAL_CONSOLES_CHECK = "${SERIAL_CONSOLES}"
 
 APPEND = "console=tty0 console=ttyS0,115200 reboot=p,w intel-spi.writeable=1 intel_iommu=on printk.time=1 loglevel=9"
+
+PREFERRED_PROVIDER_virtual/kernel ??= "linux-korg-netdev"
+PREFERRED_VERSION_linux-korg-netdev ??= "6.11%"
