--- a/meta-intel-bsp/conf/machine/intel-axxia-snr.conf
+++ b/meta-intel-bsp/conf/machine/intel-axxia-snr.conf
@@ -10,3 +10,6 @@ SERIAL_CONSOLES = "115200;ttyS4"
 SERIAL_CONSOLES_CHECK = "${SERIAL_CONSOLES}"
 
 APPEND = "console=tty0 console=ttyS4,115200 intel_iommu=on idle=poll"
+
+PREFERRED_PROVIDER_virtual/kernel ??= "linux-intel"
+PREFERRED_VERSION_linux-intel ??= "6.6%"
