--- a/meta-intel-bsp/conf/machine/intel-axxia-grr.conf
+++ b/meta-intel-bsp/conf/machine/intel-axxia-grr.conf
@@ -12,3 +12,6 @@ SERIAL_CONSOLES = "115200;ttyS4"
 SERIAL_CONSOLES_CHECK = "${SERIAL_CONSOLES}"
 
 APPEND = "console=tty0 console=ttyS4,115200 reboot=p,w intel-spi.writeable=1 intel_iommu=on,sm_on"
+
+PREFERRED_PROVIDER_virtual/kernel ??= "linux-intel"
+PREFERRED_VERSION_linux-intel ??= "6.6%"
