README: Add info about the new kernel recipes
A0411 - Add new kernel repositories PMR (meta-intel-axxia)

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-distro/conf/templates/default/local.conf.sample
+++ b/meta-intel-distro/conf/templates/default/local.conf.sample
@@ -1,10 +1,12 @@
 # Intel Axxia hardware board target machine: intel-axxia-snr or intel-axxia-grr
 MACHINE = "intel-axxia-grr"
 
-# Kernel providers: linux-intel, linux-intel-rt, linux-intel-debug, linux-intel-rt-debug
-PREFERRED_PROVIDER_virtual/kernel = "linux-intel"
+# Kernel providers (other than defined in the machine configuration file):
+e.g. linux-intel, linux-intel-private, linux-yocto, linux-korg-netdev
+#PREFERRED_PROVIDER_virtual/kernel = "linux-intel"
 
-# Kernel versions: 6.1 or 6.6 (default)
+# Kernel versions (other than defined in the machine configuration file):
+# e.g. 6.1%, 6.6%, 6.11%
 PREFERRED_VERSION_linux-intel = "6.6%"
 
 # Add simics support (sources should be in meta-intel-distro/download)
