meta-intel-distro: Make GCC 13 the Default
This reverts a previous commit that switched the default to
gcc 11 for performance reasons.

This reverts commit 6da8b3a64c37a3c85a7d0dc98a7690bc1cc4232a.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-distro/conf/templates/default/local.conf.sample
+++ b/meta-intel-distro/conf/templates/default/local.conf.sample
@@ -17,7 +17,7 @@ PREFERRED_VERSION_linux-intel = "6.6%"
 # Enable "multilib"
 #DISTRO_FEATURES:append = " multilib"
 
-# Choose GCC version: 15.% (gcc15), 13.% (gcc13) or 11.% (default)
+# Choose GCC version: 15.% (gcc15) or 11.% (gcc11). Default version: 13.%
 #DISTRO_FEATURES:append = " gcc15"
 
 # Enable settings for INTEL QSP System (for axxia-image-qsp image)
